<resources>
    <string name="app_name">气质佳</string>
    <string name="tvBaseTitle">标题</string>
    <string name="loadTips">正在加载中，请稍后.....</string>
    <string name="loadCompleted">加载完成</string>
    <string name="network_error">网络故障，请检查网络</string>

    <string name="share_app">我发现了一款很好用的APP，叫气质佳 ，快去应用商店上看看吧~</string>
    <string name="page_return">返回</string>
    <string name="remind">提示</string>
    <string name="update">更新</string>
    <string name="initializing">正在初始化，请稍侯……</string>
    <string name="logging">正在登录，请稍侯……</string>
    <string name="login_faild">登录失败，请检查网络后重试</string>
    <string name="login_succeed">登录成功</string>
    <string name="exitting">正在退出，请稍侯……</string>
    <string name="loading">正在加载，请稍后...</string>
    <string name="get_failed">获取失败，请检查网络后重试</string>
    <string name="get_succeed">获取成功</string>
    <string name="adding">正在添加，请稍后...</string>
    <string name="add_failed">添加失败，请检查网络后重试</string>
    <string name="add_succeed">添加成功</string>
    <string name="saving">正在保存，请稍后...</string>
    <string name="save_failed">保存失败，请检查网络后重试</string>
    <string name="save_succeed">保存成功</string>
    <string name="deleting">正在删除，请稍后...</string>
    <string name="delete_failed">删除失败，请检查网络后重试</string>
    <string name="delete_succeed">删除成功</string>
    <string name="changing">正在修改，请稍后...</string>
    <string name="change_failed">修改失败，请检查网络后重试</string>
    <string name="change_succeed">修改成功</string>
    <string name="function_will_coming_soon">这个功能即将推出^_^</string>
    <string name="net_error">网络异常，请稍后重试</string>
    <string name="no_more">没有更多了</string>
    <string name="no_sdcard">请插入SD卡</string>
    <string name="openning">正在开启，请稍后...</string>
    <string name="open_failed">开启失败，请检查网络后重试</string>
    <string name="open_succeed">开启成功</string>
    <string name="closing">正在关闭，请稍后...</string>
    <string name="close_failed">关闭失败，请检查网络后重试</string>
    <string name="close_succeed">关闭成功</string>
    <string name="sending">正在发送，请稍后...</string>
    <string name="send_failed">发送失败，请检查网络后重试</string>
    <string name="send_succeed">发送成功</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
    <string name="xlistview_footer_hint_loading">正在加载更多...</string>
    <string name="xlistview_footer_hint_complete">已加载完全部</string>
    <string name="user_name">游客</string>
    <string name="user_signature">什么都没有填写哦~</string>

    <string name="user_body_data">身体数据</string>
    <string name="user_practice_history">训练历史</string>
    <string name="user_cache">离线缓存</string>
    <string name="user_favorite">我的收藏</string>
    <string name="user_setting">设置</string>
    <string name="login_username">用户名(手机/邮箱/账号)</string>
    <string name="login_password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="login_tip">立即登陆</string>

</resources>
